--- a/The_Web/Battle/Gemfile
+++ b/The_Web/Battle/Gemfile
@@ -12,3 +12,5 @@ gem 'simplecov', require: false, group: :test
 gem 'simplecov-console', require: false, group: :test
 gem 'twilio-ruby'
 gem 'selenium-webdriver'
+gem 'simplecov'
+gem 'simplecov-console'
